add: tailwind and nextui config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
   "files": [],
   "references": [
     {
@@ -7,5 +12,6 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  
 }
