--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-query": "^3.39.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
