--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1"
   },
-  "packageManager": "yarn@4.1.1+sha224.00f08619463229f8ba40c4ee90e8c2e4ced1f11c3115c26f3b98432e"
+  "packageManager": "yarn@4.3.1"
 }
